# Mesh_RF_Analyzer

./: .gitattributes  .gitignore  .gitmodules  BUGFIX_AGENT_PROMPT.md  CHANGELOG.md  Dockerfile  FIXPLAN.md  IMPLEMENTATION_PLAN.md  ITM_INTEGRATION_AUDIT.md  OPENTOPO_GUIDE.md  README.md  RELEASE_NOTES.md  REVIEW-REPORT.md  ROADMAP.md  VERIFICATION_REPORT.md  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  test_nodes.csv  vite.config.js
.github/workflows/: cleanup-packages.yml  docker-publish.yml
Documentation/: ITM-INTEGRATION-REVIEW.md  README.md  ROADMAP.md  batch-processing.md  elevation-scan-improvements.md  elevation-scan.md  hardware-settings.md  interactions.md  link-analyzer.md  rf-simulator-integration-plan.md  rf-simulator-refactor-report.md  rf-simulator.md  site-analyzer.md  viewshed.md
dev-dist/: sw.js
docs/: RF-TOOL-REVIEW-AND-IMPROVEMENT-REPORT.md
libmeshrf/: CMakeLists.txt
libmeshrf/build_wasm/: Makefile  cmake_install.cmake  meshrf.js  meshrf.wasm
libmeshrf/include/: meshrf_coverage.h
libmeshrf/js/: Worker.ts  meshrf.wasm
libmeshrf/src/: bindings.cpp  meshrf_coverage.cpp
public/: env-config.js  meshrf.wasm
redis_data/: dump.rdb
rf-engine/: Dockerfile  generate_icons.py  optimization_service.py  requirements.txt  rf_physics.py  rf_worker.py  server.py  test_optimize.json  tile_manager.py
rf-engine/api/: export.py
rf-engine/core/: algorithms.py
rf-engine/tasks/: viewshed.py
scripts/: test_rf_math.mjs
src/: App.jsx  index.css
src/data/: presets.js
(+41 files in other folders)
